add html and css

--- a/contact.html
+++ b/contact.html
@@ -120,9 +120,64 @@
             </div>
         </div>
     </header>
-    
+
     <main class="main__login">
-        
+        <div class="container">
+            <div class="row row-ml justify-content-between">
+                <div class="col-lg-4 col-pd">
+                    <div class="main__login_icon">
+                        <div class="main__login_icon-box d-flex">
+                            <i class="main__login_icon-box_icon fas fa-envelope"></i>
+                            <div class="text">
+                                <p class="text_email">Email</p>
+                                <a class="main__login_icon-box_link"
+                                    href="Tesolasiauzb@gmail.com">Tesolasiauzb@gmail.com</a>
+                            </div>
+                        </div>
+                        <div class="main__login_icon-box d-flex">
+                            <i class="main__login_icon-box_icon fab fa-telegram"></i>
+                            <div class="text">
+                                <p class="text_email">Telegram</p>
+                                <a class="main__login_icon-box_link"
+                                    href="https://t.me/TesolAsiauz">https://t.me/TesolAsiauz</a>
+                            </div>
+                        </div>
+                        <div class="main__login_icon-box d-flex">
+                            <i class="main__login_icon-box_icon fab fa-facebook-square"></i>
+                            <div class="text">
+                                <p class="text_email">Facebook</p>
+                                <a class="main__login_icon-box_link" href="#">INTESOLworldwide</a>
+                            </div>
+                        </div>
+                        <div class="main__login_icon-box d-flex">
+                            <i class="main__login_icon-box_icon fas fa-phone-square-alt"></i>
+                            <div class="text d-flex flex-column">
+                                <p class="text_email">Contact us</p>
+                                <a class="main__login_icon-box_link" href="#">+99897 753 45 65</a>
+                                <a class="main__login_icon-box_link" href="#">+99899 814 50 27</a>
+                                <a class="main__login_icon-box_link" href="#">+99894 658 07 18</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-pd">
+                    <div class="main__login-input_box">
+                        <p class="main__login-input_box_p">Contact INTESOL using the email address to find out about franchise, agency and affiliate opportunities. Please give details of  location, type of partnership you are interested in and size of business/school.</p>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <input class="input__main" type="text" placeholder="Name">
+                            </div>
+                            <div class="col-lg-6">
+                                <input class="input__main" type="email" placeholder="Email Address">
+                            </div>
+                            <div class="col-12">
+                                <textarea class="textarea__main" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
 
