add html and css styles

--- a/contact.html
+++ b/contact.html
@@ -162,18 +162,35 @@
                 </div>
                 <div class="col-lg-6 col-pd">
                     <div class="main__login-input_box">
-                        <p class="main__login-input_box_p">Contact INTESOL using the email address to find out about franchise, agency and affiliate opportunities. Please give details of  location, type of partnership you are interested in and size of business/school.</p>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <input class="input__main" type="text" placeholder="Name">
+                        <form>
+                            <p class="main__login-input_box_p">Contact INTESOL using the email address to find out about
+                                franchise, agency and affiliate opportunities. Please give details of location, type of
+                                partnership you are interested in and size of business/school.</p>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <input class="input__main" type="text" placeholder="Name" required>
+                                </div>
+                                <div class="col-lg-6">
+                                    <input class="input__main" type="email" placeholder="Email Address" required>
+                                </div>
+                                <div class="col-12">
+                                    <textarea class="textarea__main" name="" id="" cols="30" rows="10"
+                                        placeholder="Message"></textarea>
+                                </div>
                             </div>
-                            <div class="col-lg-6">
-                                <input class="input__main" type="email" placeholder="Email Address">
-                            </div>
-                            <div class="col-12">
-                                <textarea class="textarea__main" name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-                            </div>
-                        </div>
+                            <button class="main__login-input_box_button">send <i
+                                    class="main__login-input_box_button_icon fas fa-arrow-right"></i></button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-8 col-pd">
+                    <div class="main__login_text">
+                        <span class="main__login_text_span">UKRLP (UK Register of Learning Providers). Number
+                            10012948</span>
+                        <p class="main__login_text_p">INTESOL Worldwide is registered under the UKRLP (UK Register of
+                            Learning Providers).
+                            Registration on the UKRLP means that we have been verified against a recognised legal
+                            source.</p>
                     </div>
                 </div>
             </div>
