--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#"><img class="header__menu_img" src="img/logo2.png" alt=""></a>
+                        <a class="navbar-brand" href="index.html"><img class="header__menu_img" src="img/logo2.png" alt=""></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -124,7 +124,7 @@
     <main class="main__login">
         <div class="container">
             <div class="row row-ml justify-content-between">
-                <div class="col-lg-4 col-pd">
+                <div class="col-lg-4 col-md-3 col-12 col-pd">
                     <div class="main__login_icon">
                         <div class="main__login_icon-box d-flex">
                             <i class="main__login_icon-box_icon fas fa-envelope"></i>
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-pd">
+                <div class="col-lg-6 col-md-8 col-12 col-pd">
                     <div class="main__login-input_box">
                         <form>
                             <p class="main__login-input_box_p">Contact INTESOL using the email address to find out about
@@ -183,7 +183,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-lg-8 col-pd">
+                <div class="col-lg-8 col-md-10 col-12  col-pd">
                     <div class="main__login_text">
                         <span class="main__login_text_span">UKRLP (UK Register of Learning Providers). Number
                             10012948</span>
@@ -198,6 +198,72 @@
     </main>
 
 
+    <footer class="footer__block">
+        <div class="container text-center">
+            <div class="row row-ml justify-content-center">
+                <div class="col-lg-7 col-md-10 col-12 col-pd">
+                    <div class="footer__block_box">
+                        <span class="footer__block_box_span">START YOUR TEFL/TESOL JOURNEY HERE
+                            TAKE ADVANTAGE OF OUR SPECIAL OFFER
+                            GET YOURSELF ON A TEFL/TESOL COURSE</span>
+                        <h1 class="footer__block_box_h1">Ready For a Change? Just Do It!</h1>
+                    </div>
+                </div>
+            </div>
+            <button class="footer__block_box_button">Contact Us<i
+                    class="footer__block_box_button_icon fas fa-arrow-right"></i></button>
+            <div class="footer__block_img">
+                <img class="footer__block_img_logo" src="img/logo2.png" alt="">
+            </div>
+            <div class="footer__block_icon d-flex">
+                <div class="instagram">
+                    <a class="instagram_link" href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+                <div class="facebook">
+                    <a class="facebook_link" href="#"><i class="fab fa-facebook-f"></i></a>
+                </div>
+                <div class="telegram">
+                    <a class="telegram_link" href="https://t.me/TesolAsiauz"><i class="fab fa-telegram-plane"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__menu">
+            <div class="container">
+                <nav class="footer__menu_nav">
+                    <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="index.html">Home</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a>
+                        </li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">TEFL Jobs</a>
+                        </li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a>
+                        </li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="#">Accreditation</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Visas</a>
+                        </li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Grammar
+                                Offer</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Reviews</a>
+                        </li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
+                                href="#">Contact</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Terms &
+                                Conditions</a>
+                        </li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Privacy
+                                Policy</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="footer__lastBox">
+            <div class="container">
+                <p class="footer__lastBox_p">&COPY; Copyright - INTESOL Worldwide Ltd. All rights reserved. Admissions
+                    Office 27 Chestnut Close, Middlewich, Cheshire, CW10 9QJ, United Kingdom</p>
+            </div>
+        </div>
+    </footer>
 
 
 
