changed index page footer__login

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
           </div>
         </div>
       </div>
-      <button class="footer__block_box_button">Contact Us<i
+      <button class="footer__block_box_button"><a class="footer__block_box_button_link" href="contact.html">Contact Us</a><i
           class="footer__block_box_button_icon fas fa-arrow-right"></i></button>
       <div class="footer__block_img">
         <img class="footer__block_img_logo" src="img/logo2.png" alt="">
@@ -485,7 +485,8 @@
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Visas</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Grammar Offer</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Reviews</a></li>
-            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="contact.html">Contact</a></li>
+            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="contact.html">Contact</a>
+            </li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Terms & Conditions</a>
             </li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Privacy Policy</a></li>
@@ -495,7 +496,8 @@
     </div>
     <div class="footer__lastBox">
       <div class="container">
-        <p class="footer__lastBox_p">&COPY; Copyright - INTESOL Worldwide Ltd. All rights reserved. Admissions Office 27 Chestnut Close, Middlewich, Cheshire, CW10 9QJ, United Kingdom</p>
+        <p class="footer__lastBox_p">&COPY; Copyright - INTESOL Worldwide Ltd. All rights reserved. Admissions Office 27
+          Chestnut Close, Middlewich, Cheshire, CW10 9QJ, United Kingdom</p>
       </div>
     </div>
   </footer>
