--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   <a class="header_nav-link" href="#">Grammer Offer</a>
                 </li>
                 <li class="nav-item">
-                  <a class="header_nav-link" href="#">Reviews</a>
+                  <a class="header_nav-link" href="reviews.html">Reviews</a>
                 </li>
                 <li class="nav-item">
                   <a class="header_nav-link" href="contact.html">Contact</a>
