--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="header_nav-link" href="#">TEFL Jobs</a>
+                  <a class="header_nav-link" href="TeflJobs.html">TEFL Jobs</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="header_nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
