changed index reviews contact page menyu

--- a/TeflJobs.html
+++ b/TeflJobs.html
@@ -123,7 +123,7 @@
 
     <main class="main__text">
         <div class="container">
-            <div class="col-lg-8 col-md-11 col-pd">
+            <div class="col-lg-8 col-md-11 col-12 col-pd">
                 <div class="main__text_1">
                     <span class="main__text_1_span">UKRLP (UK Register of Learning Providers). Number 10012948</span>
                     <p class="main__text_1_p">INTESOL Worldwide is registered under the UKRLP (UK Register of Learning Providers).
@@ -131,7 +131,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-lg-9 col-md-11 col-pd">
+            <div class="col-lg-9 col-md-11 col-12 col-pd">
                 <div class="main__text_2">
                     <p class="main__text_2_p">One of the most common questions we get asked is what the teaching job prospects are like for
                         graduates of the INTESOL course and what the likelihood is of gaining employment with a
