--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" href="#">TEFL Jobs</a>
+                                    <a class="header_nav-link" href="TeflJobs.html">TEFL Jobs</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="header_nav-link dropdown-toggle" href="#" id="navbarDropdown"
@@ -234,7 +234,7 @@
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="index.html">Home</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a>
                         </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">TEFL Jobs</a>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a>
                         </li>
