--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
           <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Home</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a></li>
-            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">TEFL Jobs</a></li>
+            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Accreditation</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Visas</a></li>
