changed index html (header__fon)

--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
         <div class="row row-ml justify-content-center">
           <div class="col-lg-8 col-md-10 col-sm-11 col-12 col-pd">
             <p class="header__fon_p">Helping Students Since 1993</p>
-            <h1 class="header__fon_h1">TEFL Certification <br> Accredited TESOL & TEFL Courses</h1>
-            <p class="header__fon_text">Now proud to offer dual certification and verification direct from the awarding
-              body. For more information<a class="header__fon_text_link" href="#">click here</a></p>
-            <p class="header__fon_pp">100% of INTESOL graduates over the last 27 years have found a teaching position.
-              We care about our students.</p>
+            <h1 class="header__fon_h1">TEFL/TESOL Certification<br>Accredited TESOL & TEFL
+              Courses</h1>
+            <p class="header__fon_pp">100% of UK TESOL/INTESOL graduates over the last 28 years have found a
+              teaching position.</p>
+              <p class="header__fon_pp">We care about our students.</p>
+              <p class="header__fon_text">TEFL/TESOL courses from the leading quality course provider for over 28 years!</p>
           </div>
         </div>
       </div>
