--- a/reviews.html
+++ b/reviews.html
@@ -33,42 +33,8 @@
                                 <li class="nav-item">
                                     <a class="header_nav-link" aria-current="page" href="index.html">Home</a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                    <a class="header_nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Courses
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <li><a class="dropdown-item" href="#">TESOL/TEFL 120-hour Certificate course
-                                                with TEYL</a></li>
-                                        <li><a class="dropdown-item" href="#">TESOL 150-hour Certificate course with
-                                                Teaching Practice
-                                                Certificate</a></li>
-                                        <li><a class="dropdown-item" href="#">TEFL Specialized TEYL (Teaching English to
-                                                Young
-                                                Learners)70-hour Advanced Certificate course</a></li>
-                                        <li><a class="dropdown-item" href="#">TEFL Specialized 90-hour Teaching Business
-                                                English Specialist
-                                                course</a></li>
-                                        <li><a class="dropdown-item" href="#">TEFL Specialized 60-hour IELTS for
-                                                teachers/IELTS Instructor
-                                                course</a></li>
-                                        <li><a class="dropdown-item" href="#">Pre and Primary Education Diploma
-                                                course</a></li>
-                                        <li><a class="dropdown-item" href="#">Primary STEAM teacher Certificate</a></li>
-                                        <li><a class="dropdown-item" href="#">Level 7 TESOL 350/390-hour diploma
-                                                course</a></li>
-                                        <li><a class="dropdown-item" href="#">TESOL 190-hour course with Teaching
-                                                Practice-Level 5</a></li>
-                                        <li><a class="dropdown-item" href="#">CELT-P</a></li>
-                                        <li><a class="dropdown-item" href="#">CELT-S</a></li>
-                                        <li><a class="dropdown-item" href="#">CELTA</a></li>
-                                        <li><a class="dropdown-item" href="#">Train the Trainer course</a></li>
-                                        <li><a class="dropdown-item" href="#">Intensive 2 weeks’ short Refresher
-                                                course.</a></li>
-                                        <li><a class="dropdown-item" href="#">Teacher travel program(Teacher share
-                                                program)</a></li>
-                                    </ul>
+                                <li class="nav-item">
+                                    <a class="header_nav-link" aria-current="page" href="index.html">Courses</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="header_nav-link" href="TeflJobs.html">TEFL Jobs</a>
