changed all menyu and tefljobs page end

--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
                   <a class="header_nav-link" href="#">Accreditation</a>
                 </li>
                 <li class="nav-item">
-                  <a class="header_nav-link" href="#">Visas</a>
-                </li>
-                <li class="nav-item">
-                  <a class="header_nav-link" href="#">Grammer Offer</a>
+                  <a class="header_nav-link" href="#">Meet Our Staff</a>
                 </li>
                 <li class="nav-item">
                   <a class="header_nav-link" href="reviews.html">Reviews</a>
@@ -459,9 +456,8 @@
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Accreditation</a></li>
-            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Visas</a></li>
-            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Grammar Offer</a></li>
-            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Reviews</a></li>
+            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Meet Our Staff</a></li>
+            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="contact.html">Contact</a>
             </li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Terms & Conditions</a>
