--- a/reviews.html
+++ b/reviews.html
@@ -55,13 +55,10 @@
                                     <a class="header_nav-link" href="#">Accreditation</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" href="#">Visas</a>
+                                    <a class="header_nav-link" href="#">Meet Our Staff</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" href="#">Grammer Offer</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="header_nav-link" href="#">Reviews</a>
+                                    <a class="header_nav-link" href="reviews.html">Reviews</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="header_nav-link" href="contact.html">Contact</a>
@@ -399,7 +396,7 @@
             <div class="container">
                 <nav class="footer__menu_nav">
                     <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Home</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="index.html">Home</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a>
@@ -408,11 +405,8 @@
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="#">Accreditation</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Visas</a>
-                        </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Grammar
-                                Offer</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Reviews</a>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Meet Our Staff</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="contact.html">Contact</a>
