--- a/contact.html
+++ b/contact.html
@@ -54,16 +54,13 @@
                                     <a class="header_nav-link" href="#">Accreditation</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" href="#">Visas</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="header_nav-link" href="#">Grammer Offer</a>
+                                    <a class="header_nav-link" href="#">Meet Our Staff</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="header_nav-link" href="reviews.html">Reviews</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" href="#">Contact</a>
+                                    <a class="header_nav-link" href="contact.html">Contact</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="header_nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
@@ -206,14 +203,11 @@
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="#">Accreditation</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Visas</a>
-                        </li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Grammar
-                                Offer</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Reviews</a>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Meet Our Staff</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
-                                href="#">Contact</a></li>
+                                href="contact.html">Contact</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Terms &
                                 Conditions</a>
                         </li>
