--- a/TeflJobs.html
+++ b/TeflJobs.html
@@ -55,7 +55,7 @@
                                     <a class="header_nav-link" href="#">Accreditation</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" href="#">Grammer Offer</a>
+                                    <a class="header_nav-link" href="staff.html">Meet Our Staff</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="header_nav-link" href="reviews.html">Reviews</a>
@@ -257,7 +257,7 @@
                 <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a></li>
                 <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a></li>
                 <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Accreditation</a></li>
-                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Meet Our Staff</a></li>
+                <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet Our Staff</a></li>
                 <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a></li>
                 <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="contact.html">Contact</a>
                 </li>
