--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
                                     <a class="header_nav-link" href="#">Accreditation</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="header_nav-link" href="#">Meet Our Staff</a>
+                                    <a class="header_nav-link" href="staff.html">Meet Our Staff</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="header_nav-link" href="reviews.html">Reviews</a>
@@ -203,7 +203,7 @@
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
                                 href="#">Accreditation</a></li>
-                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Meet Our Staff</a></li>
+                        <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="staff.html">Meet Our Staff</a></li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a>
                         </li>
                         <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link"
