--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   <a class="header_nav-link" href="#">Accreditation</a>
                 </li>
                 <li class="nav-item">
-                  <a class="header_nav-link" href="#">Meet Our Staff</a>
+                  <a class="header_nav-link" href="staff.html">Meet Our Staff</a>
                 </li>
                 <li class="nav-item">
                   <a class="header_nav-link" href="reviews.html">Reviews</a>
