add some animations for index page

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
               Courses</h1>
             <p class="header__fon_pp">100% of UK TESOL/INTESOL graduates over the last 28 years have found a
               teaching position.</p>
-              <p class="header__fon_pp">We care about our students.</p>
-              <p class="header__fon_text">TEFL/TESOL courses from the leading quality course provider for over 28 years!</p>
+            <p class="header__fon_pp">We care about our students.</p>
+            <p class="header__fon_text">TEFL/TESOL courses from the leading quality course provider for over 28 years!
+            </p>
           </div>
         </div>
       </div>
@@ -93,7 +94,7 @@
     <div class="main__block_box">
       <div class="row row-ml">
         <div class="col-lg-4 col-md-4 col-12 col-pd">
-          <img class="main__block_img" src="img/main__block_img.jpg" alt="">
+          <img class="main__block_img wow zoomIn" data-wow-duration="3s" src="img/main__block_img.jpg" alt="">
         </div>
         <div class="col-lg-8 col-md-8 col-12 col-pd">
           <div class="main__block_text">
@@ -119,13 +120,14 @@
                   required (terms apply)</li>
               </ol>
             </div>
-            <p class="main__block_text_extra">EXTRA – introduction to an Apostille Service with a discounted fee if your
+            <p class="main__block_text_extra">EXTRA – introduction to an Apostille Service with a discounted fee if
+              your
               employer requires this.</p>
             <p class="main__block_text_price">Price £175</p>
             <h6 class="main__block_text_h6">ADD TEACHING PRACTICE FOR JUST 100GBP (ONLINE OR VIDEO SUBMISSION)</h6>
             <p class="main__block_text_some">Some employers may need evidence that you can teach. INTESOL gives you the
               opportunity to prove it,</p>
-            <button class="main__block_text_button">See Course<i
+            <button class="main__block_text_button wow bounceInRight" data-wow-duration="3s">See Course<i
                 class="main__block_text_button_icon fas fa-arrow-right"></i></button>
           </div>
         </div>
@@ -140,7 +142,7 @@
       <div class="row row-ml justify-content-center">
         <h5 class="main__courses_h5">Most Popular Courses</h5>
         <div class="col-lg-4 col-md-6 col-sm-6 col-11 col-pd">
-          <div class="main__courses-box">
+          <div class="main__courses-box wow fadeInLeft" data-wow-duration="3s">
             <div class="main__courses-box_first">
               <h4 class="main__courses-box_first_h4">120 hour</h4>
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
@@ -164,7 +166,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-11 col-pd">
-          <div class="main__courses-box">
+          <div class="main__courses-box wow fadeIn" data-wow-duration="3s">
             <div class="main__courses-box_first">
               <h4 class="main__courses-box_first_h4">120 hour</h4>
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
@@ -188,7 +190,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-11 col-pd">
-          <div class="main__courses-box">
+          <div class="main__courses-box wow fadeInRight" data-wow-duration="3s">
             <div class="main__courses-box_first">
               <h4 class="main__courses-box_first_h4">120 hour</h4>
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
@@ -212,7 +214,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-11 col-pd">
-          <div class="main__courses-box" data-aos="zoom-in-right" data-aos-duration="2000">
+          <div class="main__courses-box wow fadeInLeft" data-wow-duration="3s">
             <div class="main__courses-box_first">
               <h4 class="main__courses-box_first_h4">140 hour</h4>
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
@@ -236,7 +238,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-11 col-pd">
-          <div class="main__courses-box" data-aos="zoom-out" data-aos-duration="2000">
+          <div class="main__courses-box wow fadeIn" data-wow-duration="3s">
             <div class="main__courses-box_first">
               <h4 class="main__courses-box_first_h4">140 hour</h4>
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
@@ -260,7 +262,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-6 col-11 col-pd">
-          <div class="main__courses-box" data-aos="zoom-in-right" data-aos-duration="2000">
+          <div class="main__courses-box  wow fadeInRight" data-wow-duration="3s">
             <div class="main__courses-box_first">
               <h4 class="main__courses-box_first_h4">140 hour</h4>
               <span class="main__courses-box_first_span">Certificate in TEFL</span>
@@ -311,57 +313,49 @@
         <div class="col-lg-4 col-md-4 col-sm-6 col-12 col-pd">
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check" data-aos="zoom-in"
-                data-aos-duration="1500"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">27 years of solid reputation & experience</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check" data-aos="zoom-in"
-                data-aos-duration="1500"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Quality courses known throughout the world</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check" data-aos="zoom-in"
-                data-aos-duration="1500"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Accredited by specialist UK ELT Awarding Body</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check" data-aos="zoom-in"
-                data-aos-duration="1500"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Online/onsite TEFL courses with teaching practice</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check" data-aos="zoom-in"
-                data-aos-duration="1500"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Worldwide network of INTESOL branches</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check" data-aos="zoom-in"
-                data-aos-duration="1500"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Network of verified TEFL job contacts</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check" data-aos="zoom-in"
-                data-aos-duration="1500"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Flexible study options</p>
             </div>
           </div>
           <div class="main__information_box_second">
             <div class="main__information_box_second_block d-flex align-items-center">
-              <i class="main__information_box_second_block_icon fas fa-check" data-aos="zoom-in"
-                data-aos-duration="1500"></i>
+              <i class="main__information_box_second_block_icon fas fa-check wow wow fadeIn" data-wow-duration="3s"></i>
               <p class="main__information_box_second_block_p">Team of highly qualified TESOL instructors</p>
             </div>
           </div>
@@ -430,9 +424,10 @@
           </div>
         </div>
       </div>
-      <button class="footer__block_box_button"><a class="footer__block_box_button_link" href="contact.html">Contact Us</a><i
+      <button class="footer__block_box_button wow fadeInRightBig" data-wow-duration="2s"><a
+          class="footer__block_box_button_link" href="contact.html">Contact Us</a><i
           class="footer__block_box_button_icon fas fa-arrow-right"></i></button>
-      <div class="footer__block_img">
+      <div class="footer__block_img wow rotateIn" data-wow-duration="3s">
         <img class="footer__block_img_logo" src="img/logo2.png" alt="">
       </div>
       <div class="footer__block_icon d-flex">
@@ -447,17 +442,19 @@
         </div>
       </div>
     </div>
-    <div class="footer__menu">
+    <div class="footer__menu wow zoomInDown" data-wow-duration="2s">
       <div class="container">
         <nav class="footer__menu_nav">
           <ul class="footer__menu_nav_ul d-flex justify-content-around flex-wrap">
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Home</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Courses</a></li>
-            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a></li>
+            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="TeflJobs.html">TEFL Jobs</a>
+            </li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">About</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Accreditation</a></li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Meet Our Staff</a></li>
-            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a></li>
+            <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="reviews.html">Reviews</a>
+            </li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="contact.html">Contact</a>
             </li>
             <li class="footer__menu_nav_ul_li"><a class="footer__menu_nav_ul_li_link" href="#">Terms & Conditions</a>
@@ -482,7 +479,13 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
   <script>
-    new WOW().init();
+    new WOW({
+      boxClass: 'wow', // default
+      animateClass: 'animated', // default
+      offset: 0, // default
+      mobile: false, // default
+      live: true // default
+    }).init();
   </script>
   <script src="js/main.js"></script>
 </body>
